syntax = "proto3";

option csharp_namespace = "SSKA.Grpc";

package authorization;

// Authorization service - replaces WcfServARR/ServARCode.svc
service AuthorizationService {
  // Register an authorization request - creates or updates account and acceptance set
  // Returns the Account ID if successful
  rpc TryToRegisterAuthRequest (AuthorizationRequest) returns (RegisterAuthResponse);

  // Get the authorization code for a paid account
  // Returns the auth code if account is paid and request code matches
  rpc GetAuthCode (GetAuthCodeRequest) returns (GetAuthCodeResponse);

  // Health check endpoint
  rpc CheckHealth (HealthCheckRequest) returns (HealthCheckResponse);
}

// Authorization request message - matches WCF AuthorizationRequest DataContract
message AuthorizationRequest {
  int32 account_id = 1;           // 0 for new accounts, >0 for existing
  string user_email = 2;          // User's email address
  string user_name = 3;           // User's account name
  string user_first_name = 4;     // User's first name
  string auth_request_code = 5;   // Authorization request code (16 chars from client)
  // Field 6 removed: auth_code is now generated by admin only, not sent by client
  reserved 6;
}

// Response from TryToRegisterAuthRequest
message RegisterAuthResponse {
  bool success = 1;
  int32 account_id = 2;           // The created/updated account ID
  string message = 3;             // Success or error message
  string error_code = 4;          // Error code if failed (empty if success)
}

// Request to get authorization code
message GetAuthCodeRequest {
  int32 account_id = 1;           // Account ID
  string auth_request_code = 2;   // Authorization request code to match
}

// Response with authorization code
message GetAuthCodeResponse {
  bool success = 1;
  string auth_code = 2;           // The authorization code (empty if not found/not paid)
  string message = 3;             // Success or error message
  string error_code = 4;          // Error code: "NOT_PAID", "NOT_FOUND", "INVALID_REQUEST"
}

// Health check request
message HealthCheckRequest {
  // Empty - no parameters needed
}

// Health check response
message HealthCheckResponse {
  bool is_healthy = 1;
  bool database_connected = 2;
  string message = 3;
  string server_version = 4;
}
